--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
             <!-- button -->
             <a href="#" class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed 
             rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+
+            <!-- Hamburger icon -->
+            <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+            </button>
+        </div>
+
+        <!-- mobile menu -->
+        <div class="md:hidden">
+            <div id="menu" class="hidden absolute flex-col items-center self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+                <a href="#">Pricing</a>
+                <a href="#">Product</a>
+                <a href="#">About Us</a>
+                <a href="#">Careers</a>
+                <a href="#">Community</a>
+            </div>
         </div>
     </nav>
 
@@ -190,5 +208,92 @@
             </div>
         </div>
     </section>
+
+    <!-- CTA section -->
+    <section class="bg-brightRed" id="cta">
+        <!-- flex-container -->
+        <div class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0">
+            <!-- Heading -->
+            <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
+                Simplify how your team works today
+            </h2>
+            <!-- button -->
+            <div>
+                <a href="#" class="p-3 px-6 pt-2 text-brightRed bg-white rounded-full shadow-2xl baseline hover:bg-gray-900">Get Started</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="bg-veryDarkBlue">
+        <!-- flex container -->
+        <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0 md:space-x-6">
+            <!-- logo and social links container -->
+            <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+                <div class="mx-auto my-6 text-center text-white md:hidden">
+                    Copyright &copy; 2022, All Rights Reserved
+                </div>
+                <!-- logo -->
+                <div>
+                    <img src="img/logo-white.svg" alt="" class="h-8">
+                </div>
+                <!-- social links container -->
+                <div class="flex justify-center space-x-8 md:space-x-5">
+                    <!-- link 1 -->
+                    <a href="">
+                        <img src="img/icon-facebook.svg" alt="" class="h-8">
+                    </a>
+                    <!-- link 2 -->
+                    <a href="">
+                        <img src="img/icon-youtube.svg" alt="" class="h-8">
+                    </a>
+                    <!-- link 3 -->
+                    <a href="">
+                        <img src="img/icon-twitter.svg" alt="" class="h-8">
+                    </a>
+                    <!-- link 4 -->
+                    <a href="">
+                        <img src="img/icon-pinterest.svg" alt="" class="h-8">
+                    </a>
+                    <!-- link 5 -->
+                    <a href="">
+                        <img src="img/icon-instagram.svg" alt="" class="h-8">
+                    </a>
+                </div>
+            </div>
+
+            <!-- list container -->
+            <div class="flex justify-around space-x-32 md:space-x-20">
+                <div class="flex flex-col space-y-3 text-white">
+                    <a href="" class="hover:text-brightRed">Home</a>
+                    <a href="" class="hover:text-brightRed">Pricing</a>
+                    <a href="" class="hover:text-brightRed">Product</a>
+                    <a href="" class="hover:text-brightRed">About</a>
+                </div>
+                <div class="flex flex-col space-y-3 text-white">
+                    <a href="" class="hover:text-brightRed">Careers</a>
+                    <a href="" class="hover:text-brightRed">Community</a>
+                    <a href="" class="hover:text-brightRed">Privacy Policy</a>
+                </div>
+            </div>
+
+            <!-- input container -->
+            <div class="flex flex-col justify-between">
+                <form action="">
+                    <div class="flex space-x-3">
+                        <input type="text" class="flex-1 px-4 rounded-full focus:outline-none" placeholder="Updated in your inbox">
+                        <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLigt focus:outline-none">
+                            Go
+                        </button>
+                    </div>
+                </form>
+                <div class="hidden text-white md:block">
+                    Copyright &copy; 2022, All Rights Reserved
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
