--- a/index.html
+++ b/index.html
@@ -273,14 +273,14 @@
         <!-- Slider main container -->
         <div class="swiper md:hidden">
           <!-- Additional required wrapper -->
-          <div class="swiper-wrapper border-red-700">
+          <div class="swiper-wrapper border-red-700 mt-10">
             <!-- Slides -->
             <div class="swiper-slide">
               <!-- testimonial 1 -->
               <div
-                class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3 border-red"
+                class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
               >
-                <img src="img/avatar-anisha.png" alt="" class="w-16 -mt-14" />
+                <img src="img/avatar-anisha.png" alt="" class="w-16 -mt-14 fixed" />
                 <h5 class="text-lg font-bold">Anisha Li</h5>
                 <p class="text-sm text-darkGrayishBlue">
                   "Manage has supercharged our team's workflow. The ability to
@@ -484,7 +484,7 @@
       const swiper = new Swiper(".swiper", {
         // Optional parameters
         // direction: 'vertical',
-        loop: true,
+        // loop: true,
 
         // If we need pagination
         pagination: {
