--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
               <div
                 class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
               >
-                <img src="img/avatar-anisha.png" alt="" class="w-16 -mt-14 fixed" />
+                <img src="img/avatar-anisha.png" alt="" class="w-16 -mt-14" />
                 <h5 class="text-lg font-bold">Anisha Li</h5>
                 <p class="text-sm text-darkGrayishBlue">
                   "Manage has supercharged our team's workflow. The ability to
@@ -297,7 +297,7 @@
                 <img
                   src="img/avatar-ali.png"
                   alt=""
-                  class="w-16 -mt-14 overflow-visible"
+                  class="w-16 -mt-14"
                 />
                 <h5 class="text-lg font-bold">Ali Bravo</h5>
                 <p class="text-sm text-darkGrayishBlue">
